--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
 		"format": "dprint fmt && xo --fix"
 	},
 	"peerDependencies": {
-		"dprint": "^0.45.0",
-		"react": "^18.0.0",
-		"tailwindcss": "^3.4.0",
-		"xo": "^0.57.0"
+		"dprint": "0.x",
+		"react": "18.x",
+		"tailwindcss": "3.x",
+		"xo": "0.x"
+	},
+	"peerDependenciesMeta": {
+		"dprint": { "optional": true },
+		"react": { "optional": true },
+		"tailwindcss": { "optional": true }
 	},
 	"dependencies": {
 		"@phaphoso/eslint-plugin-dprint": "^0.5.2",
@@ -39,11 +44,11 @@
 		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-tailwindcss": "^3.14.2"
+		"eslint-plugin-tailwindcss": "^3.14.3"
 	},
 	"devDependencies": {
-		"@tommy-mitchell/dprint-config": "^0.1.0",
-		"dprint": "^0.45.0",
-		"xo": "^0.57.0"
+		"@tommy-mitchell/dprint-config": "^0.1.1",
+		"dprint": "0.x",
+		"xo": "0.x"
 	}
 }
