update plugins, add tests

--- a/.xo-config.json
+++ b/.xo-config.json
@@ -1,5 +1,8 @@
 {
-	"extends": ["./index.js"],
+	"$schema": "https://json.schemastore.org/eslintrc.json",
+	"extends": ["./index.js", "./dprint.js"],
+	"ignores": ["test/fixtures"],
+	"extensions": ["json"],
 	"rules": {
 		"import/no-anonymous-default-export": "off",
 		"unicorn/prefer-module": "off"
