remove `eslint-plugin-package-json`

--- a/package.json
+++ b/package.json
@@ -29,14 +29,12 @@
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-plugin-dprint-integration": "^0.3.0",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
-		"eslint-plugin-package-json": "^0.15.2",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"eslint-plugin-readable-tailwind": "^1.5.3",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
-		"eslint-plugin-tailwindcss": "^3.17.4",
-		"jsonc-eslint-parser": "^2.4.0"
+		"eslint-plugin-tailwindcss": "^3.17.4"
 	},
 	"devDependencies": {
 		"@tommy-mitchell/dprint-config": "^0.2.0",
