--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.9",
-		"eslint-plugin-readable-tailwind": "^1.7.0",
+		"eslint-plugin-readable-tailwind": "beta",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"eslint-plugin-sort-react-dependency-arrays": "^1.0.0",
 		"eslint-plugin-tailwindcss": "^3.17.4"
@@ -48,7 +48,7 @@
 	"peerDependencies": {
 		"dprint": "0.x",
 		"react": "18.x",
-		"tailwindcss": "3.x",
+		"tailwindcss": "4.x",
 		"xo": "0.x"
 	},
 	"peerDependenciesMeta": {
