--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-perfectionist": "^3.2.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
-		"eslint-plugin-readable-tailwind": "beta",
+		"eslint-plugin-readable-tailwind": "1.9.0",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
-		"eslint-plugin-sort-react-dependency-arrays": "^1.0.0"
+		"eslint-plugin-sort-react-dependency-arrays": "^1.0.0",
+		"eslint-plugin-tailwindcss": "^3.18.0"
 	},
 	"devDependencies": {
 		"@tommy-mitchell/dprint-config": "^0.4.0",
@@ -45,7 +46,7 @@
 	"peerDependencies": {
 		"dprint": "0.x",
 		"react": "19.x",
-		"tailwindcss": "4.x",
+		"tailwindcss": "3.x",
 		"xo": "0.x"
 	},
 	"peerDependenciesMeta": {
