--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	},
 	"sideEffects": false,
 	"type": "module",
-	"files": ["src"],
+	"files": [
+		"src"
+	],
 	"exports": {
 		"default": "./src/index.js"
 	},
@@ -35,9 +37,11 @@
 		"eslint-plugin-tailwindcss": "^3.18.0"
 	},
 	"devDependencies": {
+		"@stylistic/eslint-plugin": "^3.0.1",
 		"@tommy-mitchell/dprint-config": "^0.4.0",
 		"ava": "^6.2.0",
 		"dprint": "0.x",
+		"eslint-plugin-react": "^7.37.4",
 		"execa": "^9.5.2",
 		"tempy": "^3.1.0",
 		"xo": "npm:@spence-s/flat-xo@latest"
