--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
 		"test": "ava"
 	},
 	"dependencies": {
+		"@eslint/eslintrc": "^3.2.0",
+		"@next/eslint-plugin-next": "^15.1.6",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-perfectionist": "^4.7.0",
-		"eslint-plugin-react-refresh": "^0.4.18",
+		"eslint-plugin-perfectionist": "^4.8.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
 		"eslint-plugin-readable-tailwind": "^1.9.0",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"eslint-plugin-sort-react-dependency-arrays": "^1.0.0",
